--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -615,16 +615,16 @@ table.wp-list-table span.product-type.booking::before {
 }
 
 
- .wpi_crm_link {
+ .iwp_crm_link {
     margin-bottom: 7px;
     margin-left: 93px;
  }
 
- .wp_invoice_new_user ul.wpi_user_selection {
+ .wp_invoice_new_user ul.iwp_user_selection {
 
  }
 
- select.wpi_user_email_selection option {
+ select.iwp_user_email_selection option {
   max-width: 275px;
  }
 
@@ -637,12 +637,12 @@ table.wp-list-table span.product-type.booking::before {
   width: 95%;
  }
 
- #postbox_user_existing .wpi_user_email_selection_wrapper{
+ #postbox_user_existing .iwp_user_email_selection_wrapper{
   background: #EDEDED;
   padding: 10px 0 10px 10px;
  }
 
- .wpi_invoice_paid {
+ .iwp_invoice_paid {
   background: none repeat scroll 0 0 #333A33;
   color: #FCFCFC;
   font-size: 1.5em;
@@ -652,19 +652,19 @@ table.wp-list-table span.product-type.booking::before {
   -moz-border-radius: 5px;
   border-radius: 5px;
  }
- .wpi_invoice_status_paid {
+ .iwp_invoice_status_paid {
 
  }
 
- .wpi_invoice_status_paid #invoice_list .row_delete,
- .wpi_invoice_status_paid #postbox_publish,
- .wpi_invoice_status_paid #postbox_payment_methods,
- .wpi_invoice_status_paid .itemized_list  .footer {
+ .iwp_invoice_status_paid #invoice_list .row_delete,
+ .iwp_invoice_status_paid #postbox_publish,
+ .iwp_invoice_status_paid #postbox_payment_methods,
+ .iwp_invoice_status_paid .itemized_list  .footer {
 
  }
 
- .wpi_invoice_status_paid #invoice_list .input_field,
- .wpi_invoice_status_paid #postbox_user_existing .input_field  {
+ .iwp_invoice_status_paid #invoice_list .input_field,
+ .iwp_invoice_status_paid #postbox_user_existing .input_field  {
 
  }
 
@@ -688,17 +688,17 @@ table.wp-list-table span.product-type.booking::before {
   margin-bottom: 5px;
 }
 
-.wpi_toggle_advanced_payment_options span {
+.iwp_toggle_advanced_payment_options span {
 
 }
-tr.wpi_advanced_payment_options  {
+tr.iwp_advanced_payment_options  {
   display:none;
 }
 
 .wp_invoice_accordion {
 
 }
-#wpi_invoice_form .wp_invoice_accordion.ui-accordion .ui-accordion-content {
+#iwp_invoice_form .wp_invoice_accordion.ui-accordion .ui-accordion-content {
     background: none repeat scroll 0 0 #EFEFEF;
     border-left: 1px solid #D5D5D5;
     border-right: 1px solid #D5D5D5;
@@ -706,23 +706,23 @@ tr.wpi_advanced_payment_options  {
     padding: 0 27px 5px 7px;
 }
 
-#wpi_invoice_form .wp_invoice_accordion.ui-accordion .ui-accordion-content .input_field {
+#iwp_invoice_form .wp_invoice_accordion.ui-accordion .ui-accordion-content .input_field {
     background: none repeat scroll 0 0 #F4F4F4;
     border: 1px solid #E1E1E1;
 }
 
 
-#wpi_invoice_form .wp_invoice_accordion h3 {
+#iwp_invoice_form .wp_invoice_accordion h3 {
   background: #E6E6E6;
 }
 
-#wpi_invoice_form .wp_invoice_accordion th span,
-#wpi_invoice_form .wp_invoice_accordion .wp_invoice_tooltip {
+#iwp_invoice_form .wp_invoice_accordion th span,
+#iwp_invoice_form .wp_invoice_accordion .wp_invoice_tooltip {
   color: #6C6C6C;
 }
 
 /** Comments box (Quotes) **/
-#wpi_comments_box .inside {
+#iwp_comments_box .inside {
   overflow-y: auto;
   overflow-x: hidden;
   max-height: 400px;
